--- a/scenarios/polygon-cdk/cdk-erigon-sovereign-ecdsa-multisig/network/cross-stack-partition.yaml
+++ b/scenarios/polygon-cdk/cdk-erigon-sovereign-ecdsa-multisig/network/cross-stack-partition.yaml
@@ -45,13 +45,26 @@ spec:
       target_proto: tcp,udp
   success_criteria:
   - name: l2_continues_producing_blocks
-    description: L2 continues producing blocks despite L1 isolation (for duration
-      of test)
+    description: L2 continues producing blocks despite L1 isolation (for duration of test)
     type: prometheus
     query: increase(panoptichain_rpc_height{job=~".*sequencer.*|.*l2.*"}[1m])
     threshold: '> 0'
     window: 5m
     critical: true
+  - name: block_time_stable
+    description: Block time remains stable (not increasing significantly)
+    type: prometheus
+    query: rate(panoptichain_rpc_block_interval_sum[2m]) / rate(panoptichain_rpc_block_interval_count[2m])
+    threshold: < 5.0
+    window: 5m
+    critical: false
+  - name: transaction_throughput_maintained
+    description: Transaction processing rate doesn't drop significantly
+    type: prometheus
+    query: rate(panoptichain_rpc_gas_used_count[1m])
+    threshold: '> 0.1'
+    window: 5m
+    critical: false
   - name: batch_submissions_fail
     description: Batch submissions to L1 fail during partition
     type: prometheus
@@ -63,3 +76,10 @@ spec:
   - panoptichain_rpc_height
   - panoptichain_rpc_gas_used_sum
   - up
+  - panoptichain_rpc_block_interval_sum
+  - panoptichain_rpc_block_interval_count
+  - panoptichain_rpc_gas_used_count
+  - panoptichain_rpc_finalized_height
+  - panoptichain_rpc_time_to_finalized
+  - panoptichain_rpc_time_to_mine_sum
+  - panoptichain_rpc_time_to_mine_count
