--- a/scenarios/polygon-cdk/op-geth/cpu-memory/aggkit-cpu-starved.yaml
+++ b/scenarios/polygon-cdk/op-geth/cpu-memory/aggkit-cpu-starved.yaml
@@ -3,61 +3,86 @@ kind: ChaosScenario
 metadata:
   name: aggkit-cpu-starved
   description: CPU starvation on AggKit to test performance under limited resources
-  tags: [resource, cpu, medium, aggkit, performance]
+  tags:
+  - resource
+  - cpu
+  - medium
+  - aggkit
+  - performance
   author: DevTools
-  version: "0.0.1"
-
+  version: 0.0.1
 spec:
-  # Target AggKit
   targets:
-    - selector:
-        type: kurtosis_service
-        enclave: "${ENCLAVE_NAME}"
-        pattern: "aggkit"
-      alias: aggkit_node
-
+  - selector:
+      type: kurtosis_service
+      enclave: ${ENCLAVE_NAME}
+      pattern: aggkit
+    alias: aggkit_node
   duration: 8m
   warmup: 2m
   cooldown: 2m
-
-  # CPU stress at 70%
   faults:
-    - phase: cpu_starved_aggkit
-      description: Stress AggKit CPU at 70% on 2 cores
-      target: aggkit_node
-      type: cpu_stress
-      params:
-        cpu_percent: 70
-        cores: 2
-        method: stress
-
+  - phase: cpu_starved_aggkit
+    description: Stress AggKit CPU at 70% on 2 cores
+    target: aggkit_node
+    type: cpu_stress
+    params:
+      cpu_percent: 70
+      cores: 2
+      method: stress
   success_criteria:
-    - name: aggkit_continues_operating
-      description: AggKit continues operating despite CPU starvation
-      type: prometheus
-      query: up{job="aggkit"}
-      threshold: "== 1"
-      window: 8m
-      critical: true
-
-    - name: block_production_continues
-      description: Block production continues (may slow down)
-      type: prometheus
-      query: increase(panoptichain_rpc_height{job="aggkit"}[1m])
-      threshold: "> 0"
-      window: 8m
-      critical: true
-
-    - name: transaction_processing_delayed
-      description: Transaction processing continues but may be delayed
-      type: prometheus
-      query: increase(panoptichain_rpc_gas_used_sum[2m])
-      threshold: "> 0"
-      window: 8m
-      critical: false
-
+  - name: aggkit_continues_operating
+    description: AggKit continues operating despite CPU starvation
+    type: prometheus
+    query: up{job="aggkit"}
+    threshold: == 1
+    window: 8m
+    critical: true
+  - name: block_production_continues
+    description: Block production continues (may slow down)
+    type: prometheus
+    query: increase(panoptichain_rpc_height{job="aggkit"}[1m])
+    threshold: '> 0'
+    window: 8m
+    critical: true
+  - name: transaction_throughput_maintained
+    description: Transaction processing rate doesn't drop significantly
+    type: prometheus
+    query: rate(panoptichain_rpc_gas_used_count[1m])
+    threshold: '> 0.1'
+    window: 5m
+    critical: false
+  - name: empty_blocks_low
+    description: Not producing too many empty blocks
+    type: prometheus
+    query: rate(panoptichain_rpc_empty_block[2m])
+    threshold: < 0.5
+    window: 5m
+    critical: false
+  - name: block_time_stable
+    description: Block time remains stable despite resource pressure
+    type: prometheus
+    query: rate(panoptichain_rpc_block_interval_sum[2m]) / rate(panoptichain_rpc_block_interval_count[2m])
+    threshold: < 5.0
+    window: 5m
+    critical: false
+  - name: transaction_processing_delayed
+    description: Transaction processing continues but may be delayed
+    type: prometheus
+    query: increase(panoptichain_rpc_gas_used_sum[2m])
+    threshold: '> 0'
+    window: 8m
+    critical: false
   metrics:
-    - panoptichain_rpc_height
-    - panoptichain_rpc_gas_used_sum
-    - process_cpu_seconds_total
-    - up
+  - panoptichain_rpc_height
+  - panoptichain_rpc_gas_used_sum
+  - process_cpu_seconds_total
+  - up
+  - panoptichain_rpc_gas_used_count
+  - panoptichain_rpc_empty_block
+  - panoptichain_rpc_block_interval_sum
+  - panoptichain_rpc_block_interval_count
+  - panoptichain_rpc_transactions_per_block_sum
+  - panoptichain_rpc_transactions_per_block_count
+  - panoptichain_rpc_time_to_mine_sum
+  - panoptichain_rpc_time_to_mine_count
