--- a/scenarios/polygon-cdk/cdk-erigon-rollup/cpu-memory/l1-execution-cpu-stress.yaml
+++ b/scenarios/polygon-cdk/cdk-erigon-rollup/cpu-memory/l1-execution-cpu-stress.yaml
@@ -3,61 +3,103 @@ kind: ChaosScenario
 metadata:
   name: l1-execution-cpu-stress
   description: CPU stress on L1 execution layer to test L2 resilience to slow L1
-  tags: [resource, cpu, critical, l1, execution]
+  tags:
+  - resource
+  - cpu
+  - critical
+  - l1
+  - execution
   author: DevTools
-  version: "0.0.1"
-
+  version: 0.0.1
 spec:
-  # Target L1 execution layer
   targets:
-    - selector:
-        type: kurtosis_service
-        enclave: "${ENCLAVE_NAME}"
-        pattern: "el-1-geth.*"
-      alias: l1_execution
-
+  - selector:
+      type: kurtosis_service
+      enclave: ${ENCLAVE_NAME}
+      pattern: el-1-geth.*
+    alias: l1_execution
   duration: 8m
   warmup: 2m
   cooldown: 2m
-
-  # CPU stress at 75%
   faults:
-    - phase: cpu_stress_l1
-      description: Stress L1 execution CPU at 75% on 3 cores
-      target: l1_execution
-      type: cpu_stress
-      params:
-        cpu_percent: 75
-        cores: 3
-        method: stress
-
+  - phase: cpu_stress_l1
+    description: Stress L1 execution CPU at 75% on 3 cores
+    target: l1_execution
+    type: cpu_stress
+    params:
+      cpu_percent: 75
+      cores: 3
+      method: stress
   success_criteria:
-    - name: l1_continues_operating
-      description: L1 continues producing blocks despite CPU stress
-      type: prometheus
-      query: increase(panoptichain_rpc_height{job=~"el-1-geth.*"}[1m])
-      threshold: "> 0"
-      window: 8m
-      critical: true
-
-    - name: l2_continues_operating
-      description: L2 continues producing blocks despite slow L1
-      type: prometheus
-      query: increase(panoptichain_rpc_height{job=~".*sequencer.*|.*l2.*"}[1m])
-      threshold: "> 0"
-      window: 8m
-      critical: true
-
-    - name: batch_submissions_may_delay
-      description: Batch submissions may be delayed but eventually succeed
-      type: prometheus
-      query: increase(panoptichain_rpc_height[3m])
-      threshold: "> 0"
-      window: 8m
-      critical: false
-
+  - name: l1_continues_operating
+    description: L1 continues producing blocks despite CPU stress
+    type: prometheus
+    query: increase(panoptichain_rpc_height{job=~"el-1-geth.*"}[1m])
+    threshold: '> 0'
+    window: 8m
+    critical: true
+  - name: l2_continues_operating
+    description: L2 continues producing blocks despite slow L1
+    type: prometheus
+    query: increase(panoptichain_rpc_height{job=~".*sequencer.*|.*l2.*"}[1m])
+    threshold: '> 0'
+    window: 8m
+    critical: true
+  - name: transaction_throughput_maintained
+    description: Transaction processing rate doesn't drop significantly
+    type: prometheus
+    query: rate(panoptichain_rpc_gas_used_count[1m])
+    threshold: '> 0.1'
+    window: 5m
+    critical: false
+  - name: empty_blocks_low
+    description: Not producing too many empty blocks
+    type: prometheus
+    query: rate(panoptichain_rpc_empty_block[2m])
+    threshold: < 0.5
+    window: 5m
+    critical: false
+  - name: block_time_stable
+    description: Block time remains stable despite resource pressure
+    type: prometheus
+    query: rate(panoptichain_rpc_block_interval_sum[2m]) / rate(panoptichain_rpc_block_interval_count[2m])
+    threshold: < 5.0
+    window: 5m
+    critical: false
+  - name: batch_submissions_may_delay
+    description: Batch submissions may be delayed but eventually succeed
+    type: prometheus
+    query: increase(panoptichain_rpc_height[3m])
+    threshold: '> 0'
+    window: 8m
+    critical: false
+  - name: batches_being_sequenced
+    description: New batches are being sequenced
+    type: prometheus
+    query: increase(panoptichain_rpc_zkevm_total_sequenced_batches[5m])
+    threshold: '> 0'
+    window: 5m
+    critical: false
+  - name: batches_being_verified
+    description: Batches are being verified (proofs generated)
+    type: prometheus
+    query: increase(panoptichain_rpc_zkevm_total_verified_batches[10m])
+    threshold: '> 0'
+    window: 10m
+    critical: false
   metrics:
-    - panoptichain_rpc_height
-    - process_cpu_seconds_total
-    - l1_panoptichain_rpc_block_interval_sum
-    - up
+  - panoptichain_rpc_height
+  - process_cpu_seconds_total
+  - l1_panoptichain_rpc_block_interval_sum
+  - up
+  - panoptichain_rpc_gas_used_count
+  - panoptichain_rpc_empty_block
+  - panoptichain_rpc_block_interval_sum
+  - panoptichain_rpc_block_interval_count
+  - panoptichain_rpc_transactions_per_block_sum
+  - panoptichain_rpc_transactions_per_block_count
+  - panoptichain_rpc_time_to_mine_sum
+  - panoptichain_rpc_time_to_mine_count
+  - panoptichain_rpc_zkevm_total_sequenced_batches
+  - panoptichain_rpc_zkevm_total_verified_batches
+  - panoptichain_rpc_zkevm_time_since_last_aggregation
