--- a/scenarios/polygon-cdk/cdk-erigon-rollup/cpu-memory/prover-combined-stress.yaml
+++ b/scenarios/polygon-cdk/cdk-erigon-rollup/cpu-memory/prover-combined-stress.yaml
@@ -45,12 +45,46 @@ spec:
     threshold: '> 0'
     window: 10m
     critical: false
+  - name: transaction_throughput_maintained
+    description: Transaction processing rate doesn't drop significantly
+    type: prometheus
+    query: rate(panoptichain_rpc_gas_used_count[1m])
+    threshold: '> 0.1'
+    window: 5m
+    critical: false
+  - name: empty_blocks_low
+    description: Not producing too many empty blocks
+    type: prometheus
+    query: rate(panoptichain_rpc_empty_block[2m])
+    threshold: < 0.5
+    window: 5m
+    critical: false
+  - name: block_time_stable
+    description: Block time remains stable despite resource pressure
+    type: prometheus
+    query: rate(panoptichain_rpc_block_interval_sum[2m]) / rate(panoptichain_rpc_block_interval_count[2m])
+    threshold: < 5.0
+    window: 5m
+    critical: false
   - name: proof_generation_delayed_but_completes
     description: Proof generation times increase but proofs complete
     type: prometheus
-    query: rate(panoptichain_rpc_block_interval_sum[3m]) / clamp_min(rate(panoptichain_rpc_block_interval_count[3m]),
-      0.001)
+    query: rate(panoptichain_rpc_block_interval_sum[3m]) / clamp_min(rate(panoptichain_rpc_block_interval_count[3m]), 0.001)
     threshold: < 900
+    window: 10m
+    critical: false
+  - name: batches_being_sequenced
+    description: New batches are being sequenced
+    type: prometheus
+    query: increase(panoptichain_rpc_zkevm_total_sequenced_batches[5m])
+    threshold: '> 0'
+    window: 5m
+    critical: false
+  - name: batches_being_verified
+    description: Batches are being verified (proofs generated)
+    type: prometheus
+    query: increase(panoptichain_rpc_zkevm_total_verified_batches[10m])
+    threshold: '> 0'
     window: 10m
     critical: false
   metrics:
@@ -60,3 +94,13 @@ spec:
   - process_cpu_seconds_total
   - process_resident_memory_bytes
   - up
+  - panoptichain_rpc_gas_used_count
+  - panoptichain_rpc_empty_block
+  - panoptichain_rpc_block_interval_count
+  - panoptichain_rpc_transactions_per_block_sum
+  - panoptichain_rpc_transactions_per_block_count
+  - panoptichain_rpc_time_to_mine_sum
+  - panoptichain_rpc_time_to_mine_count
+  - panoptichain_rpc_zkevm_total_sequenced_batches
+  - panoptichain_rpc_zkevm_total_verified_batches
+  - panoptichain_rpc_zkevm_time_since_last_aggregation
