--- a/scenarios/polygon-cdk/cdk-erigon-rollup/network/l1-rpc-timeout.yaml
+++ b/scenarios/polygon-cdk/cdk-erigon-rollup/network/l1-rpc-timeout.yaml
@@ -39,6 +39,20 @@ spec:
     threshold: '> 0'
     window: 5m
     critical: true
+  - name: block_time_stable
+    description: Block time remains stable (not increasing significantly)
+    type: prometheus
+    query: rate(panoptichain_rpc_block_interval_sum[2m]) / rate(panoptichain_rpc_block_interval_count[2m])
+    threshold: < 5.0
+    window: 5m
+    critical: false
+  - name: transaction_throughput_maintained
+    description: Transaction processing rate doesn't drop significantly
+    type: prometheus
+    query: rate(panoptichain_rpc_gas_used_count[1m])
+    threshold: '> 0.1'
+    window: 5m
+    critical: false
   - name: batch_submission_may_delay
     description: Batch submissions may be delayed but should eventually succeed
     type: prometheus
@@ -46,7 +60,31 @@ spec:
     threshold: '> 0'
     window: 5m
     critical: false
+  - name: batches_being_sequenced
+    description: New batches are being sequenced
+    type: prometheus
+    query: increase(panoptichain_rpc_zkevm_total_sequenced_batches[5m])
+    threshold: '> 0'
+    window: 5m
+    critical: false
+  - name: batches_being_verified
+    description: Batches are being verified (proofs generated)
+    type: prometheus
+    query: increase(panoptichain_rpc_zkevm_total_verified_batches[10m])
+    threshold: '> 0'
+    window: 10m
+    critical: false
   metrics:
   - panoptichain_rpc_height
   - l1_panoptichain_rpc_block_interval_sum
   - up
+  - panoptichain_rpc_block_interval_sum
+  - panoptichain_rpc_block_interval_count
+  - panoptichain_rpc_gas_used_count
+  - panoptichain_rpc_finalized_height
+  - panoptichain_rpc_time_to_finalized
+  - panoptichain_rpc_time_to_mine_sum
+  - panoptichain_rpc_time_to_mine_count
+  - panoptichain_rpc_zkevm_total_sequenced_batches
+  - panoptichain_rpc_zkevm_total_verified_batches
+  - panoptichain_rpc_zkevm_time_since_last_aggregation
